code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

21-Aug-2010 Jean-Marie Simonet
 # [#21964] Help menu item visible in edit mode if hidden in module settings. Thanks Sander and Bill.
 # [#21921] coding remnant left in module.php. Thanks Troy.
 # [#21915] SEF URL Defaults. Thanks Amy.
 
20-Aug-2010 Ian MacLennan
 # [#21951] Action URLs missing in half of the backend forms
 # [#21953] Registration form can be displayed and submitted if registration is disabled
 # [#19223] MySQL strict mode incompatibility
 # [#20343] Update phpmailer to v5.1 (latest version) for php5
 # [#21462] Sample Data Typo
 # [#21474] UTF8 trim lib throws warning if char list is empty
 # [#21580] E_STRICT error in JCacheCallback due to JHtmlString::truncate() being non-static

20-Aug-2010 Mark Dexter
 # [#21774] patch for failing system tests [cache related]

20-Aug-2010 Jean-Marie Simonet
 # [#21947] Banner Client Editing missing Save & New icon and text. Thanks Roland
 #$ Wrong key in Hathor.
 # [#21912] Inconsistencies with submenus in Bluestork admin menus. Thanks Klas.
 # [#21872] Categories overview & Menu items indentations. Thanks Michael.
 # [#21906] SMTP without authentication not working. Thanks Roland and Ian.
 # [#21954] Registration form data gets lost if save fails. Thanks Nikolai

19-Aug-2010 Jean-Marie Simonet
 # [#21929] Language String Error. Thanks Prasit
 # [#21913] Banner ad component issues. Thanks Prasit
 
18-Aug-2010 Jean-Marie Simonet
 ^# [#21917] Mootools more needs updating to 1.2.4.4. Thanks Matt.
 
17-Aug-2010 Jean-Marie Simonet
 [#21812] contact form not sending email. Thanks Joseph.
 
17-Aug-2010 Andrew Eddie
 # Fixed issue [#21380] session timeout while editing template style in backend, keepalive issue (Elin Waring, Michael Babker).

16-Aug-2010 Jean-Marie Simonet
 $ Customizing a global string in weblinks, newsfeeds, contacts
 
16-Aug-2010 Mark Dexter