@@ -31,6 +31,7 @@ $ -> Language fix or change
  # [#21964] Help menu item visible in edit mode if hidden in module settings. Thanks Sander and Bill.
  # [#21921] coding remnant left in module.php. Thanks Troy.
  # [#21915] SEF URL Defaults. Thanks Amy.
+ # [#21861] Incorrect plural of "suffix" in method names. Thanks Chris.
  
 20-Aug-2010 Ian MacLennan
  # [#21951] Action URLs missing in half of the backend forms
